Use URI instead of URL for downloading streams
Switched from `URL` to `URI` in the Downloader utility to handle URLs more robustly and consistently. This change ensures better handling of edge cases and improves compatibility with URI standards.